src/test_files/expected/valid_functions.error
Generating LALR tables
SEMANTIC ERROR DETECTED IN DECLARATION AND ASSIGNEMENT INSIDE FUNCTION:
	Incompatible types: FLOAT and INT
	Variables Affected: r
	Function Affected: power

SEMANTIC ERROR DETECTED IN ASSIGNMENT:
	Variable 'r' not found or out of scope
	Function Affected: power

SEMANTIC ERROR DETECTED IN ASSIGNMENT:
	Variable 'r' not found or out of scope
	Function Affected: power

SEMANTIC ERROR DETECTED IN ASSIGNMENT:
	Variable 'r' not found or out of scope
	Function Affected: power

SEMANTIC ERROR DETECTED IN RETURN STATEMENT:
	Incompatible types: FLOAT and NONETYPE
	Function Affected: power

Traceback (most recent call last):
  File "/home/beto/PycharmProjects/PPLL_Final/src/main.py", line 57, in <module>
    Main(sys.argv[1],export_tree)
  File "/home/beto/PycharmProjects/PPLL_Final/src/main.py", line 22, in __init__
    result = self.__parser.parse()
             ^^^^^^^^^^^^^^^^^^^^^
  File "/home/beto/PycharmProjects/PPLL_Final/src/parser.py", line 662, in parse
    result = self.parser.parse(input_data, lexer=self.lexer.lexer)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/beto/PycharmProjects/PPLL_Final/.venv/lib/python3.12/site-packages/ply/yacc.py", line 333, in parse
    return self.parseopt_notrack(input, lexer, debug, tracking, tokenfunc)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/beto/PycharmProjects/PPLL_Final/.venv/lib/python3.12/site-packages/ply/yacc.py", line 1120, in parseopt_notrack
    p.callable(pslice)
  File "/home/beto/PycharmProjects/PPLL_Final/src/parser.py", line 365, in p_declaration
    type = variables[-1].value.infer_type(self.symbol_table, self.record_table)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/beto/PycharmProjects/PPLL_Final/src/objects.py", line 141, in infer_type
    raise SemanticError("Param %s: esperado %s, obtenido %s" %
exception.SemanticError: Param square: esperado Variable(x,float,None), obtenido float
